@@ -1,6 +1,12 @@
 ocaml-http (0.1.3-1) UNRELEASED; urgency=low
 
   * force bash as SHELL in Makefile, since we rely on bashisms
+  * removed Http_daemon.{start,start'}, they have been deprecated a while ago
+    in favour of Http_daemon.main
+  * added 'auto_close' to daemon specifications. When set to true (defaults to
+    false), makes ocaml-http close every connection with client just after
+    having executed a callback, no matter if that callback succeeds or fails
+    with an exception
 
  -- Stefano Zacchiroli <zack@debian.org>  Mon, 29 May 2006 22:22:51 +0200
 
